config contact form back end, fix about and home main overflow to auto

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -13,6 +13,7 @@ body {
 
 main {
   padding-top: 9rem;
+  overflow: auto;
 }
 
 #navbar {
@@ -52,21 +53,18 @@ main {
     z-index: 1;
     box-shadow: var(--shadow2db);
   }
-  main {
-    /* padding-top: 1rem; */
-  }
 }
 
 @media (max-width: 768px) {
   #icons {
-    padding-top: 5rem;
+    padding-top: 2.1rem;
     padding-left: 1rem;
   }
 }
 
 @media (max-width: 576px) {
   #icons {
-    padding-top: 5rem;
+    padding-top: 1.5rem;
     padding-left: 1rem;
   }
 }
